-
Bug
-
Resolution: Done
-
P4: Low
-
None
-
Qt Creator 4.0.0
-
Windows 7 64 bit
- Make sure that you don't have a cmake binary in your environment.
- Start Creator with empty settings, e.g. by passing the parameter -settingspath.
- Start creating a new project using "File" -> "New File or Project..." -> "Non-Qt Project" -> "Plain C++ Application".
- On the "Define Build System" page, select CMake.
- On the "Kit Selection" page, select the automatically created default kit "Desktop".
Creator will give you a useless project. You can neither compile it, nor add files. Creator can not even open it properly.
Creator should refuse to use a kit without a CMake binary for a CMake project. For qmake projects and kits without a Qt version, this works correctly.
- relates to
-
QTCREATORBUG-17828
Creator doesn't ask for build system after Git clone wizard
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-16204 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 190466,2 | CMake: Register a feature for CMake-capable kits | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |